<resources>
    <string name="app_name">DropTo</string>
    <string name="string_cancel">Cancel</string>
    <string name="string_ok">OK</string>
    <string name="string_delete">Delete</string>
    <string name="title_item_pop_menu_edit">Edit</string>
    <string name="title_item_pop_menu_delete">Delete</string>
    <string name="title_item_pop_menu_pin">Pin</string>
    <string name="title_item_pop_menu_copy_text">Copy Text</string>
    <string name="title_item_pop_menu_forward">Forward</string>
    <string name="title_item_pop_menu_share">Share</string>
    <string name="string_category_icon_description">Category Icon</string>
    <string name="content_description_image_remove">Remove Image</string>
    <string name="content_description_image_content">Image Content of NoteItem</string>
    <string name="category_menu_title_edit">Edit</string>
    <string name="category_menu_title_add">Add</string>
    <string name="category_menu_title_remove">remove</string>
    <string name="category_menu_title_debug">debug</string>
    <string name="hint_category_detail_name">Category name</string>
    <string name="dialog_category_deleting_title">Delete category</string>
    <string name="dialog_category_deleting_message">Are you sure you want to delete this category? (all notes will also be removed)</string>
    <string name="dialog_category_delete_selected_title">Delete Selected Category(s)</string>
    <string name="dialog_category_delete_selected_message">Are you sure you want to delete selected category(s)? (all notes will also be removed)</string>
    <string name="dialog_note_delete_selected_title">Delete Selected NoteItems</string>
    <string name="dialog_note_delete_selected_message">Are you sure you want do delete selected note item(s)?</string>
    <string name="dialog_note_delete_pop_remove_title">Delete this note</string>
    <string name="dialog_note_delete_pop_remove_message">Are you sure you want to delete this note?</string>
    <string name="spinner_category_type_icon_description">Icon for category type</string>
    <string name="description_of_note_item_image">Image for noteItem</string>
    <string name="description_note_item_modify_icon">Icon to show this item was modified</string>
    <string name="description_of_image_viewer_image_view">imageView to contain the image that need to be show for user</string>
    <string name="description_button_attach_image">Button to select image</string>
    <string name="description_button_attach_clear">Button to clear the selected attachment</string>
    <string name="description_input_button">Button to add a new note</string>
    <string name="title_toolbar_mgmt_activity">Preference</string>
    <string name="string_image_storage_usage_prompt">Saved storage:</string>
    <string name="string_cache_storage_usage_prompt">Cache storage:</string>
    <string name="string_clear_storage_button_prompt">Clear storage:</string>
    <string name="string_mgmt_list_label">Saved Files:</string>
    <string name="description_button_attach_file">Select file attachments</string>
    <string name="string_export_db_button_prompt">Export current database</string>
    <string name="title_item_pop_menu_restore">Restore</string>
    <string name="show_deleted_notes">Show deleted notes</string>
    <string name="hide_deleted_notes">Hide deleted notes</string>
    <string name="description_button_cancel_editing_or_attach">Button to cancel editing or clear current attached files</string>
    <string name="handler_to_reorder_categories">Handler to reorder categories</string>
    <string name="string_note_sender_you">You</string>
    <string name="string_note_sender_unknown">Unknown</string>
    <string name="content_description_note_item_sender_avatar">Application icon of the sender of the note</string>
    <string name="content_description_note_item_media_play_icon">This attachment is a video</string>
    <string name="description_note_item_deleted_icon">Icon to show this item was deleted</string>
    <string name="description_note_item_not_synced_icon">Icon to show this item was not synced</string>
    <string name="description_of_note_item_file_icon">Icon of a file attachment of the note</string>
</resources>