<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/note_list_menu_copy"
        android:title="@string/title_item_pop_menu_copy_text"
        app:showAsAction="always"
        android:visible="false"
        android:icon="@drawable/icon_common_copy" />

    <item
        android:id="@+id/note_list_menu_forward"
        android:title="@string/title_item_pop_menu_forward"
        app:showAsAction="always"
        android:visible="false"
        android:icon="@drawable/icon_common_forward" />

    <item
        android:id="@+id/note_list_menu_share"
        android:title="@string/title_item_pop_menu_share"
        app:showAsAction="always"
        android:visible="false"
        android:icon="@drawable/icon_common_share" />

    <item
        android:id="@+id/note_list_menu_delete"
        android:title="@string/string_delete"
        app:showAsAction="always"
        android:visible="false"
        android:icon="@drawable/icon_common_remove"
        tools:ignore="AlwaysShowAction" />

    <item
        android:id="@+id/note_list_menu_deleted_visible"
        android:title="@string/show_deleted_notes"
        app:showAsAction="never"
        android:icon="@drawable/icon_common_eye" />

</menu>