<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/category_menu_item_remove"
        app:showAsAction="ifRoom"
        android:icon="@drawable/icon_common_remove"
        android:title="@string/category_menu_title_remove" />

    <item android:id="@+id/category_menu_item_edit"
        app:showAsAction="ifRoom"
        android:icon="@drawable/icon_common_edit"
        android:title="@string/category_menu_title_edit"/>

    <item android:id="@+id/category_menu_item_debug"
        app:showAsAction="ifRoom"
        android:icon="@drawable/icon_common_debug"
        android:title="@string/category_menu_title_debug" />

    <item android:id="@+id/category_menu_item_add"
        app:showAsAction="ifRoom"
        android:icon="@drawable/icon_common_add"
        android:title="@string/category_menu_title_add"/>

</menu>