<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.NoteDetailFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/note_detail_action_bar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/note_detail_btn_cancel"
            android:text="@string/string_cancel"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_margin="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/note_detail_btn_del"
            android:text="@string/string_delete"
            android:backgroundTint="@color/design_default_color_error"
            android:layout_marginStart="@dimen/margin_note_items"
            app:layout_constraintTop_toTopOf="@id/note_detail_btn_cancel"
            app:layout_constraintStart_toEndOf="@id/note_detail_btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/note_detail_btn_ok"
            android:text="@string/string_ok"
            app:layout_constraintTop_toTopOf="@id/note_detail_btn_cancel"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <EditText
        android:id="@+id/note_detail_text"
        android:layout_margin="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/note_detail_action_bar"
        app:layout_constraintEnd_toEndOf="parent"
        android:autofillHints=""
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        tools:ignore="LabelFor" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/note_detail_image_container"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/note_detail_text"
        android:layout_margin="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/note_detail_image_name"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/note_detail_image_md5"
            app:layout_constraintTop_toTopOf="@id/note_detail_image_remove"
            app:layout_constraintBottom_toBottomOf="@id/note_detail_image_remove"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/note_detail_image_remove"
            android:layout_marginEnd="20dp"
            android:layout_width="0dp"
            android:layout_height="0dp" />

        <ImageView
            android:id="@+id/note_detail_image_remove"
            app:layout_constraintTop_toBottomOf="@id/note_detail_image_name"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@drawable/icon_remove"
            android:contentDescription="@string/content_description_image_remove"
            android:layout_marginTop="20dp"
            android:layout_width="24dp"
            android:layout_height="24dp" />

        <ImageView
            android:id="@+id/note_detail_image_view"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/note_detail_image_remove"
            android:adjustViewBounds="true"
            android:contentDescription="@string/content_description_image_content"
            android:layout_marginTop="20dp"
            android:maxHeight="500dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.constraintlayout.widget.ConstraintLayout>